unpackaged/main/default/objects/access_cirucits_comm3__c/access_cirucits_comm3__c.object-meta.xml
<CustomObject>
    <description>Used to allow Comm3 Accounts to have related list of Circuits and DIDs etc</description>
    <label>Access Circuits Comm3</label>
    <nameField>
        <displayFormat>CID-{0000000}</displayFormat>
        <label>CircuitID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Circuits Comm3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>