unpackaged/main/default/objects/access_cirucits_comm3__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Source_acq__c</field>
            <operation>equals</operation>
            <value>Comm3</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Access Circuits Comm3</relationshipLabel>
    <relationshipName>Access_Circuits_Comm3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>