unpackaged/main/default/objects/access_cirucits_comm3__c/fields/BTN__c.field-meta.xml
<CustomField>
    <fullName>BTN__c</fullName>
    <label>BTN</label>
    <length>24</length>
    <type>Text</type>
</CustomField>