unpackaged/main/default/objects/access_cirucits_comm3__c/fields/Circuit_Number__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Number__c</fullName>
    <label>Circuit Number</label>
    <length>24</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>