unpackaged/main/default/objects/access_cirucits_comm3__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Broadcom</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Cox</fullName>
            </value>
            <value>
                <fullName>Intelepeer</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>