unpackaged/main/default/objects/access_cirucits_comm3__c/fields/Upload_Speed__c.field-meta.xml
<CustomField>
    <fullName>Upload_Speed__c</fullName>
    <label>Upload Speed</label>
    <length>8</length>
    <type>Text</type>
</CustomField>