unpackaged/main/default/objects/access_cirucits_comm3__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Circuit_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Provider__c</columns>
    <columns>Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <group>Group_Comm3</group>
    </sharedTo>
</ListView>